// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`troubleshoot - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Troubleshoot and debug agents in Azure AI Foundry. Retrieves container logs for hosted agents, discovers Application Insights connections in the project, and queries telemetry using KQL to diagnose errors, failures, and performance issues.
USE FOR: troubleshoot agent, debug agent, agent logs, agent errors, agent not responding, agent failing, container logs, diagnose agent, agent telemetry, agent traces, agent exceptions.
DO NOT USE FOR: deploying or creating agents (use deploy skill), invoking or testing agents (use invoke skill), containerizing projects (use package skill), Azure Functions (use azure-functions).
",
  "extractedKeywords": [
    "agent",
    "agents",
    "application",
    "azure",
    "azure-functions",
    "cli",
    "connections",
    "container",
    "containerizing",
    "creating",
    "debug",
    "deploy",
    "deploying",
    "diagnose",
    "discovers",
    "errors",
    "exceptions",
    "failing",
    "failures",
    "foundry",
    "functions",
    "hosted",
    "insights",
    "invoke",
    "invoking",
    "issues",
    "logs",
    "mcp",
    "monitor",
    "observability",
    "package",
    "performance",
    "project",
    "projects",
    "queries",
    "responding",
    "retrieves",
    "skill",
    "telemetry",
    "testing",
    "traces",
    "troubleshoot",
    "using",
  ],
  "name": "troubleshoot",
}
`;

exports[`troubleshoot - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "application",
  "azure",
  "azure-functions",
  "cli",
  "connections",
  "container",
  "containerizing",
  "creating",
  "debug",
  "deploy",
  "deploying",
  "diagnose",
  "discovers",
  "errors",
  "exceptions",
  "failing",
  "failures",
  "foundry",
  "functions",
  "hosted",
  "insights",
  "invoke",
  "invoking",
  "issues",
  "logs",
  "mcp",
  "monitor",
  "observability",
  "package",
  "performance",
  "project",
  "projects",
  "queries",
  "responding",
  "retrieves",
  "skill",
  "telemetry",
  "testing",
  "traces",
  "troubleshoot",
  "using",
]
`;
